--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 }
